--- a/src/browser-action.html
+++ b/src/browser-action.html
@@ -3,46 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Quick Search Focus</title>
-    <style>
-        body {
-            width: 300px;
-            height: 150px;
-            padding: 5px;
-            background-color: #222;
-            color: rgb(180, 230, 30);
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        label {
-            display: block;
-            font-size: 12px;
-            margin-bottom: 10px;
-        }
-
-        input {
-            float: left;
-            display: inline-block;
-            height: 26px;
-            margin-right: 10px;
-        }
-
-        .clear {
-            clear: both;
-        }
-    </style>
+    <link rel="stylesheet" href="browser-action.css">
 </head>
 <body>
 <h1>Quick Search Focus</h1>
 <label>
-    <input type="checkbox"> Focus on page's search box when forward slash key (/) is pressed
+    <input type="checkbox" id="option-slash-key">
+    <span>Focus on page's search box when forward slash key (/) is pressed</span>
     <div class="clear"></div>
 </label>
 <label>
-    <input type="checkbox"> Automatically focus on page's search box when the page is loaded
+    <input type="checkbox" id="option-page-load">
+    <span>Automatically focus on page's search box when the page is loaded</span>
     <div class="clear"></div>
 </label>
+<script src="browser-action.js"></script>
 </body>
 </html>
